# cucv

./: .clang-format.bak  .gitignore  CMakeLists.txt  README.md
cmake/: ConfigBuildTree.cmake  ConfigCUDA.cmake  ConfigOpenCV.cmake  ConfigVersion.cmake  VersionDef.h.in  VersionUtils.h.in
cucv/: CMakeLists.txt
cucv/core/: CMakeLists.txt
cucv/core/include/cucv/core/: base.hpp  cucvdef.h  data_type.hpp  fwd.hpp  itensor.hpp  itensor_data.hpp  precomp.h  shape.hpp  status.hpp  tensor.h  tensor.hpp  tensor_data.h  tensor_data.hpp  tensor_layout.h  tensor_layout.hpp  tensor_shape.hpp  utility.h  version.h
cucv/core/include/cucv/core/alloc/: requirements.h
cucv/core/include/cucv/core/detail/: concepts.h  inplace.h  optional.h
cucv/core/src/: status.cpp  system.cpp  tensor_layout.cpp  tensor_shape.cpp
cucv/imgproc/: CMakeLists.txt
cucv/imgproc/include/cucv/imgproc/: copy.h  ioperator.h
cucv/imgproc/include/cucv/imgproc/legacy/: cuda_utils.cuh  imgproc_legacy.h
cucv/imgproc/src/: copy.cpp  ioperator.cpp
cucv/imgproc/src/legacy/: CMakeLists.txt  copy.cu
docs/: CMakeLists.txt  Doxyfile.in
tests/: CMakeLists.txt  run_tests.bat.in  run_tests.sh.in  test_main.cpp
tests/common/: CMakeLists.txt  printers.cpp  printers.hpp
tests/imgproc/: CMakeLists.txt
tests/imgproc/system/: CMakeLists.txt  test_copy.cpp  test_version.cpp
